--- a/_config.yml
+++ b/_config.yml
@@ -1,13 +1,13 @@
 # --- Basic options --- #
 
 # Name of website
-title: My website
+title: Deeder
 
 # Short description of your site
-description: A virtual proof that I'm awesome
+description: Some pieces of my geek life
 
 # Your name to show in the footer
-author: Some Person
+author: Guillaume Guérin
 
 # --- List of links in the navigation bar --- #
 
@@ -16,7 +16,7 @@ navbar-links:
   Resources:
     - Beautiful Jekyll: "https://beautifuljekyll.com"
     - Learn markdown: "https://www.markdowntutorial.com/"
-  Author's home: "https://deanattali.com"
+  Author's home: "https://deeder.fr"
 
 # --- Logo --- #
 
@@ -38,13 +38,13 @@ round-avatar: true
 # Uncomment the links you want to show and add your information to each one.
 # If you don't want to show a link to an RSS feed, set rss to "false".
 social-network-links:
-  email: "someone@example.com"
-  facebook: deanattali
-  github: daattali
-  twitter: daattali
+  email: "contact@deeder.fr"
+#  facebook: deanattali
+  github: deeder
+  twitter: deeder
   rss: true
 #  reddit: yourname
-#  linkedin: daattali
+  linkedin: deeder
 #  xing: yourname
 #  stackoverflow: "3943160/daattali"
 #  snapchat: deanat78
@@ -63,12 +63,12 @@ social-network-links:
 # Select which social network share links to show in posts
 share-links-active:
   twitter: true
-  facebook: true
-  linkedin: true
+  facebook: false
+  linkedin: false
 
 # How to display the link to your website in the footer
 # Remove this if you don't want a link in the footer
-url-pretty: "MyWebsite.com"
+url-pretty: "deeder.fr"
 
 # Create a "tags" index page and make tags on each post clickable
 link-tags: true
